2003-01-10  NAKAJI Hiroyuki  <nakaji@tutrp.tut.ac.jp>

	* README.ja: new file, Japanese translation of README.en.
	Spaces between ascii and Japanese characters are added.

2002-11-15  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.5 (Awara-Onsen) released.

2002-11-05  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Change the name of
	the argument from get-mother to with-children along its effect.

2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Decode text
	part only.

2002-04-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-file-types): Add setting of *.jpeg for image/jpeg.

2002-10-26  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Fix logic. Do not
	refer next to next part before examining the next part.

2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Add
	`xemacs-extra-name'.


2002-07-08  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.4 (Hosorogi) released.

	* Makefile (ARC_DIR_PREFIX): New variable.
	(ARC_DIR): Use `ARC_DIR_PREFIX'.

2001-08-10  Kenichi OKADA <okada@opaopa.org>

	* semi-def.el (mime-browse-url-regexp): Allow nntps and ftps.

2001-06-12  Yuuichi Teranishi <teranisi@gohome.org>

	* mime-view.el (mime-display-multipart/related): When "start"
	parameter specifies part, treat the part as root.

2001-06-12  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* mime-view.el (mime-display-multipart/related): New function; set up
	for `mime-preview-condition'.

2001-04-19  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-bbdb.el: Load "bbdb-hooks" when the symbol function
	`bbdb-extract-field-value' is not bound or it is set up as an
	autoloaded function. [cf. <emacs-mime-ja:799,842,843,844,845,846>]

2001-04-17  YAMASHITA Junji   <ysjj@unixuser.org>
