@@ -1,3 +1,8 @@
+2003-02-08  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
+
+	* mime-view.el (mime-save-situation-examples): Bind print-length
+	and print-level.
+
 2003-01-10  NAKAJI Hiroyuki  <nakaji@tutrp.tut.ac.jp>
 
 	* README.ja: new file, Japanese translation of README.en.
